--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             color: #333;
             transition: 0.3s ease-in-out;
             text-align: center;
-            max-width:720px;
+            
+    margin: 0 auto;
         }
 
         /* Dark Mode */
@@ -58,18 +59,20 @@
 
         /* Floating Navbar - Full Width */
         .floating-navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background: #004AAD;
-            padding: 15px 20px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            border-radius: 0 0 15px 15px;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 900px;
+    background: #004AAD;
+    padding: 15px 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 0 0 15px 15px;
         }
 
         /* Brand Name */
@@ -173,7 +176,7 @@
     </nav>
 
     <!-- Bio Link Section -->
-    <section class="bio-container">
+    <header class="bio-container">
         <img src="/files/ASIBUKA-Blue.png" alt="ASIBUKA Group" title="ASIBUKA Group">
         <h1>ASIBUKA Group</h1>
         <p>Welcome to our official bio link. Connect with us on social media.</p>
@@ -197,7 +200,7 @@
                 </svg>
             </a>
         </div>
-    </section>
+    </header>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
