--- a/index.html
+++ b/index.html
@@ -190,6 +190,81 @@ section {
     padding: 20px;
     transition: background-color 0.3s, color 0.3s ease-in-out;
 }
+        h2 {
+    font-size: 20px;
+    color: #004AAD;
+    margin-bottom: 15px;
+    position: relative;
+    display: inline-block;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+h2::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    width: 80%;
+    height: 3px;
+    background: linear-gradient(to right, transparent, #004AAD, transparent);
+    transform: translateX(-50%);
+}
+
+        blockquote {
+    position: relative;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #333;
+    padding: 20px;
+    border-left: 5px solid #004AAD;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+}
+
+/* Quotation Marks */
+blockquote::before, blockquote::after {
+    font-size: 3rem;
+    color: #004AAD;
+    position: absolute;
+    font-family: Georgia, serif;
+}
+
+blockquote::before {
+    content: "“";
+    top: -10px;
+    left: 10px;
+}
+
+blockquote::after {
+    content: "”";
+    bottom: -10px;
+    right: 10px;
+}
+
+/* Author Styling */
+cite {
+    display: block;
+    margin-top: 10px;
+    font-size: 1rem;
+    font-style: normal;
+    color: #555;
+    text-align: right;
+}
+
+/* Responsive Design */
+@media (max-width: 480px) {
+    blockquote {
+        font-size: 1.2rem;
+        padding: 15px;
+    }
+
+    blockquote::before, blockquote::after {
+        font-size: 2rem;
+    }
+}
     </style>
 </head>
 <body>
