--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             color: #333;
             transition: 0.3s ease-in-out;
             text-align: center;
-            
+            max-width:900px;
     margin: 0 auto;
         }
 
@@ -221,7 +221,7 @@ h2::after {
     background: #fff;
     border-radius: 5px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
+    margin:0 auto;
 }
 
 /* Quotation Marks */
