--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASIBUKA Group</title>
-    <meta name="description" content="ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
+    <meta name="description" content="ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
     <meta name="keywords" content="ASIBUKA, ASIBUKA Group, Investasi, UMKM, Bisnis">
     <meta name="author" content="ASIBUKA Group">
     <meta name="robots" content="index, follow">
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="ASIBUKA Group">
-    <meta property="og:description" content="ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
+    <meta property="og:description" content="ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
     <meta property="og:image" content="https://www.asibuka.com/files/ASIBUKA-blue.png">
     <meta property="og:url" content="https://www.asibuka.com">
     <meta property="og:type" content="website">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ASIBUKA Group">
-    <meta name="twitter:description" content="ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
+    <meta name="twitter:description" content="ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
     <meta name="twitter:image" content="https://www.asibuka.com/files/ASIBUKA-blue.png">
     <!-- Canonical -->
     <link rel="canonical" href="https://www.asibuka.com">
@@ -29,34 +29,16 @@
       "@context": "https://schema.org",
       "@type": "WebPage",
       "name": "ASIBUKA Group",
-      "description": "ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.",
+      "description": "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.",
       "url": "https://www.asibuka.com"
     }
     </script>
     <style>
-     * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
+        *{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif}
         /* Light Mode (Default) */
-        body {
-            background-color: #f4f4f4;
-            color: #333;
-            transition: 0.3s ease-in-out;
-            text-align: center;
-            max-width:900px;
-    margin: 0 auto;
-        }
-
+        body{background-color:#f4f4f4;color:#333;transition:.3s ease-in-out;text-align:center;max-width:600px;margin:0 auto}
         /* Dark Mode */
-        body.dark-mode {
-            background-color: #1e1e1e;
-            color: #f4f4f4;
-        }
-
+        body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
         /* Floating Navbar - Full Width */
         .floating-navbar {
     position: fixed;
@@ -64,7 +46,7 @@
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
-    max-width: 900px;
+    max-width: 600px;
     background: #004AAD;
     padding: 15px 20px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -213,6 +195,7 @@ h2::after {
 
         blockquote {
     position: relative;
+            display:block;
     font-size: 1.5rem;
     font-weight: bold;
     color: #333;
@@ -283,25 +266,11 @@ cite {
     <header class="bio-container">
         <img src="/files/ASIBUKA-Blue.png" alt="ASIBUKA Group" title="ASIBUKA Group">
         <h1>ASIBUKA Group</h1>
-        <p>Welcome to our official bio link. Connect with us on social media.</p>
+        <p>ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.</p>
 
         <div class="social-links">
-            <a href="#" title="Twitter">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M23 3a10.9 10.9 0 01-3.14 1.53A4.48 4.48 0 0011.5 7v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"/>
-                </svg>
-            </a>
-
-            <a href="#" title="Facebook">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M22 12.07C22 6.48 17.52 2 12 2S2 6.48 2 12.07C2 17.06 5.84 21.12 10.66 22V14.89h-2V12h2V9.8c0-1.93 1.24-3.11 3.05-3.11.87 0 1.62.06 1.84.09v2.13h-1.26c-1 0-1.21.48-1.21 1.18V12h2.44l-.4 2.89h-2.04V22C18.16 21.12 22 17.06 22 12.07z"/>
-                </svg>
-            </a>
-
-            <a href="#" title="Blogger">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M14 10h-4v2h4c1.1 0 2 .9 2 2v4c0 1.1-.9 2-2 2H6c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2h8c1.1 0 2 .9 2 2v2h-2V6H6v12h8v-4h-4v-2h4V10z"/>
-                </svg>
+            <a href="https://blog.asibuka.com" title="Blogger">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M162.4 196c4.8-4.9 6.2-5.1 36.4-5.1 27.2 0 28.1 .1 32.1 2.1 5.8 2.9 8.3 7 8.3 13.6 0 5.9-2.4 10-7.6 13.4-2.8 1.8-4.5 1.9-31.1 2.1-16.4 .1-29.5-.2-31.5-.8-10.3-2.9-14.1-17.7-6.6-25.3zm61.4 94.5c-53.9 0-55.8 .2-60.2 4.1-3.5 3.1-5.7 9.4-5.1 13.9 .7 4.7 4.8 10.1 9.2 12 2.2 1 14.1 1.7 56.3 1.2l47.9-.6 9.2-1.5c9-5.1 10.5-17.4 3.1-24.4-5.3-4.7-5-4.7-60.4-4.7zm223.4 130.1c-3.5 28.4-23 50.4-51.1 57.5-7.2 1.8-9.7 1.9-172.9 1.8-157.8 0-165.9-.1-172-1.8-8.4-2.2-15.6-5.5-22.3-10-5.6-3.8-13.9-11.8-17-16.4-3.8-5.6-8.2-15.3-10-22C.1 423 0 420.3 0 256.3 0 93.2 0 89.7 1.8 82.6 8.1 57.9 27.7 39 53 33.4c7.3-1.6 332.1-1.9 340-.3 21.2 4.3 37.9 17.1 47.6 36.4 7.7 15.3 7-1.5 7.3 180.6 .2 115.8 0 164.5-.7 170.5zm-85.4-185.2c-1.1-5-4.2-9.6-7.7-11.5-1.1-.6-8-1.3-15.5-1.7-12.4-.6-13.8-.8-17.8-3.1-6.2-3.6-7.9-7.6-8-18.3 0-20.4-8.5-39.4-25.3-56.5-12-12.2-25.3-20.5-40.6-25.1-3.6-1.1-11.8-1.5-39.2-1.8-42.9-.5-52.5 .4-67.1 6.2-27 10.7-46.3 33.4-53.4 62.4-1.3 5.4-1.6 14.2-1.9 64.3-.4 62.8 0 72.1 4 84.5 9.7 30.7 37.1 53.4 64.6 58.4 9.2 1.7 122.2 2.1 133.7 .5 20.1-2.7 35.9-10.8 50.7-25.9 10.7-10.9 17.4-22.8 21.8-38.5 3.2-10.9 2.9-88.4 1.7-93.9z"/></svg>
             </a>
         </div>
     </header>
@@ -313,6 +282,7 @@ cite {
         <div class="slider-wrapper">
         <blockquote>Membangun sebanyak mungkin UMKM dan membuka seluas mungkin lapangan pekerjaan.</blockquote>
         <blockquote>Mengedukasi masyarakat untuk mengembangkan usaha ke tahap selanjutnya.</blockquote>
+        <blockquote>Membantu kreator untuk bisa menghasilkan dari kontennya.</blockquote>
             </div>
 
         <!-- Navigation Buttons -->
