--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
         <h2>MISI</h2>
         <div class="slider-container">
         <div class="slider-wrapper">
-        <div><blockquote>Membangun sebanyak mungkin UMKM dan membuka seluas mungkin lapangan pekerjaan.</blockquote></div>
-        <div><blockquote>Mengedukasi masyarakat untuk mengembangkan usaha ke tahap selanjutnya.</blockquote></div>
-        <div><blockquote>Membantu kreator untuk bisa menghasilkan dari kontennya.</blockquote></div>
+        <div class='slide'><blockquote>Membangun sebanyak mungkin UMKM dan membuka seluas mungkin lapangan pekerjaan.</blockquote></div>
+        <div class='slide'><blockquote>Mengedukasi masyarakat untuk mengembangkan usaha ke tahap selanjutnya.</blockquote></div>
+        <div class='slide'><blockquote>Membantu kreator untuk bisa menghasilkan dari kontennya.</blockquote></div>
             </div>
 
         <!-- Navigation Buttons -->
