--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         .slider-container{position:relative;max-width:900px;margin:40px auto;overflow:hidden;border-radius:10px;box-shadow:0 4px 10px #0000001a}
         .slider-wrapper{display:flex;transition:transform .5s ease-in-out}
         .slide{min-width:100%;padding:40px;text-align:center;font-size:20px;color:#fff;height:auto;display:flex;align-items:center;justify-content:center;flex-direction:column}
-        .prev,.next{position:absolute;top:50%;transform:translateY(-50%);background:#00000080;color:#fff;border:none;padding:10px 15px;cursor:pointer;font-size:24px;transition:.3s;border-radius:50%}
-        .prev:hover,.next:hover{background:#000c}
-        .prev{left:10px}
-        .next{right:10px}
+        .prev,.next{position:absolute;top:50%;transform:translateY(-50%);background:#0000004d;color:#fff;border:none;padding:8px 12px;cursor:pointer;font-size:20px;transition:opacity .3s ease,background .3s ease;border-radius:50%;opacity:.4}
+        .prev:hover,.next:hover{background:#000c;opacity:1}
+        .prev{left:5px}
+        .next{right:5px}
         @media (max-width: 768px) {
             .slide{font-size:18px;padding:20px}
         }
