--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         /* Slider */
         .slider-container{position:relative;max-width:900px;margin:40px auto;overflow:hidden;border-radius:10px;box-shadow:0 4px 10px #0000001a}
         .slider-wrapper{display:flex;transition:transform .5s ease-in-out}
-        .slide{min-width:100%;padding:40px;text-align:center;font-size:20px;color:#fff;height:auto;display:flex;align-items:center;justify-content:center;flex-direction:column}
+        .slide{min-width:100%;text-align:center;font-size:20px;color:#fff;height:auto;display:flex;align-items:center;justify-content:center;flex-direction:column}
         .prev,.next{position:absolute;top:50%;transform:translateY(-50%);background:#0000004d;color:#fff;border:none;padding:8px 12px;cursor:pointer;font-size:20px;transition:opacity .3s ease,background .3s ease;border-radius:50%;opacity:.4}
         .prev:hover,.next:hover{background:#000c;opacity:1}
         .prev{left:5px}
