--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         .prev{left:5px}
         .next{right:5px}
         @media (max-width: 768px) {
-            .slide{font-size:18px;padding:20px}
+            .slide{font-size:18px}
         }
     </style>
 </head>
@@ -127,6 +127,12 @@
         <button class="next" onclick="nextSlide()">&#10095;</button>
     </div>
     </section>
+    <main>
+        <h2>ASIBUKA Logistics</h2>
+        <div class='social-links'>
+            <a href='https://www.asibuka.com' title='JNT Cargo Sukamenak' target='_blank' rel='nofollow noopener noreferrer'>J&T Cargo Sukamenak</a>
+        </div>
+    </main>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
