--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         body.dark-mode .bio-container p{color:#ddd}
         body.dark-mode .social-links a{background-color:#222;color:#FFD700}
         body.dark-mode .social-links a:hover{background-color:#444;color:#ff0}
+        .links a{display:inline-block;padding:12px 18px;font-size:18px;font-weight:700;text-align:center;text-decoration:none;color:#fff;background-color:#004AAD;border-radius:8px;transition:transform .3s ease-in-out,background-color .3s ease-in-out;box-shadow:0 2px 5px #0003}
+        .links a:hover{background-color:#003580;transform:scale(1.05)}
+        body.dark-mode .links a{background-color:#222;color:#FFD700}
+        body.dark-mode .links a:hover{background-color:#444;color:#ff0}
         /* SECTION */
         section:nth-of-type(odd){background-color:#f4f4f4;color:#333}
         section:nth-of-type(even){background-color:#ddd;color:#222}
@@ -107,8 +111,11 @@
         <h1>ASIBUKA Group</h1>
         <p>ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.</p>
         <div class="social-links">
-            <a href="https://blog.asibuka.com" title="Blogger">
+            <a href="https://blog.asibuka.com" target='_blank' title="Blogger">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M162.4 196c4.8-4.9 6.2-5.1 36.4-5.1 27.2 0 28.1 .1 32.1 2.1 5.8 2.9 8.3 7 8.3 13.6 0 5.9-2.4 10-7.6 13.4-2.8 1.8-4.5 1.9-31.1 2.1-16.4 .1-29.5-.2-31.5-.8-10.3-2.9-14.1-17.7-6.6-25.3zm61.4 94.5c-53.9 0-55.8 .2-60.2 4.1-3.5 3.1-5.7 9.4-5.1 13.9 .7 4.7 4.8 10.1 9.2 12 2.2 1 14.1 1.7 56.3 1.2l47.9-.6 9.2-1.5c9-5.1 10.5-17.4 3.1-24.4-5.3-4.7-5-4.7-60.4-4.7zm223.4 130.1c-3.5 28.4-23 50.4-51.1 57.5-7.2 1.8-9.7 1.9-172.9 1.8-157.8 0-165.9-.1-172-1.8-8.4-2.2-15.6-5.5-22.3-10-5.6-3.8-13.9-11.8-17-16.4-3.8-5.6-8.2-15.3-10-22C.1 423 0 420.3 0 256.3 0 93.2 0 89.7 1.8 82.6 8.1 57.9 27.7 39 53 33.4c7.3-1.6 332.1-1.9 340-.3 21.2 4.3 37.9 17.1 47.6 36.4 7.7 15.3 7-1.5 7.3 180.6 .2 115.8 0 164.5-.7 170.5zm-85.4-185.2c-1.1-5-4.2-9.6-7.7-11.5-1.1-.6-8-1.3-15.5-1.7-12.4-.6-13.8-.8-17.8-3.1-6.2-3.6-7.9-7.6-8-18.3 0-20.4-8.5-39.4-25.3-56.5-12-12.2-25.3-20.5-40.6-25.1-3.6-1.1-11.8-1.5-39.2-1.8-42.9-.5-52.5 .4-67.1 6.2-27 10.7-46.3 33.4-53.4 62.4-1.3 5.4-1.6 14.2-1.9 64.3-.4 62.8 0 72.1 4 84.5 9.7 30.7 37.1 53.4 64.6 58.4 9.2 1.7 122.2 2.1 133.7 .5 20.1-2.7 35.9-10.8 50.7-25.9 10.7-10.9 17.4-22.8 21.8-38.5 3.2-10.9 2.9-88.4 1.7-93.9z"/></svg>
+            </a>
+            <a href="https://www.youtube.com/@ASIBUKAGroup" target='_blank' rel='nofollow noopener noreferrer' title="YouTube">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"/></svg>
             </a>
         </div>
     </header>
@@ -130,7 +137,7 @@
     </section>
     <main>
         <h2>ASIBUKA Logistics</h2>
-        <div class='social-links'>
+        <div class='links'>
             <a href='https://www.asibuka.com' title='JNT Cargo Sukamenak' target='_blank' rel='nofollow noopener noreferrer'>J&T Cargo Sukamenak</a>
         </div>
     </main>
