--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         body.dark-mode .bio-container p{color:#ddd}
         body.dark-mode .social-links a{background-color:#222;color:#FFD700}
         body.dark-mode .social-links a:hover{background-color:#444;color:#ff0}
-        .links a{display:inline-block;padding:12px 18px;font-size:18px;font-weight:700;text-align:center;text-decoration:none;color:#fff;background-color:#004AAD;border-radius:8px;transition:transform .3s ease-in-out,background-color .3s ease-in-out;box-shadow:0 2px 5px #0003}
+        .links a{display:block;padding:12px 18px;font-size:18px;font-weight:700;text-align:center;text-decoration:none;color:#fff;background-color:#004AAD;border-radius:8px;transition:transform .3s ease-in-out,background-color .3s ease-in-out;box-shadow:0 2px 5px #0003}
         .links a:hover{background-color:#003580;transform:scale(1.05)}
         body.dark-mode .links a{background-color:#222;color:#FFD700}
         body.dark-mode .links a:hover{background-color:#444;color:#ff0}
