--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         .social-links a:hover{background-color:#003580;transform:scale(1.1);box-shadow:0 4px 10px #0000004d}
         body.dark-mode .bio-container p{color:#ddd}
         body.dark-mode .social-links a{background-color:#222;color:#FFD700}
-        body.dark-mode .social-links a:hover{background-color:#444;color:#ff0}
+        body.dark-mode .social-links a:hover{background-color:#444;color:#fff}
         .links a{display:block;padding:12px 18px;font-size:18px;font-weight:700;text-align:center;text-decoration:none;color:#fff;background-color:#004AAD;border-radius:8px;transition:transform .3s ease-in-out,background-color .3s ease-in-out;box-shadow:0 2px 5px #0003}
         .links a:hover{background-color:#003580;transform:scale(1.05)}
         body.dark-mode .links a{background-color:#222;color:#FFD700}
-        body.dark-mode .links a:hover{background-color:#444;color:#ff0}
+        body.dark-mode .links a:hover{background-color:#444;color:#fff}
         /* SECTION */
         section:nth-of-type(odd){background-color:#f4f4f4;color:#333}
         section:nth-of-type(even){background-color:#ddd;color:#222}
