--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
         @media (max-width: 768px) {
             .slide{font-size:18px}
         }
+        /* FOOTER */
+        footer{text-align:center;padding:15px;font-size:16px;background-color:#f4f4f4;color:#333;margin-top:30px}
+        body.dark-mode footer{background-color:#222;color:#ddd}
     </style>
 </head>
 <body>
@@ -141,7 +144,9 @@
             <a href='https://www.asibuka.com' title='JNT Cargo Sukamenak' target='_blank' rel='nofollow noopener noreferrer'>J&T Cargo Sukamenak</a>
         </div>
     </main>
-
+<footer>
+    <p>Made with ❤️ by ASIBUKA Group &copy; <span id="year"></span></p>
+</footer>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const darkModeToggle = document.getElementById("dark-mode-toggle");
@@ -190,6 +195,7 @@
 
         // Auto-slide every 5 seconds
         setInterval(nextSlide, 5000);
+        document.getElementById("year").textContent = new Date().getFullYear();
     </script>
 </body>
 </html>
