--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
         @media (max-width: 768px) {
             .slide{font-size:18px}
         }
+        /* Sidebar Menu */
+        .hamburger{background:none;border:none;font-size:24px;cursor:pointer;color:#004AAD;transition:transform .3s ease-in-out}
+        .hamburger:hover{transform:scale(1.1)}
+        .sidebar{position:fixed;top:0;left:-250px;width:250px;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding-top:60px;box-shadow:2px 0 10px #0000004d}
+        .sidebar.open{left:0}
+        .close-btn{position:absolute;top:10px;right:10px;font-size:24px;background:none;border:none;color:#fff;cursor:pointer}
+        .menu{list-style:none;padding:0}
+        .menu li{padding:15px}
+        .menu a{color:#fff;text-decoration:none;display:block}
+        .menu a:hover{background:#fff3}
+        .dropdown .submenu{display:none;background:#003580;padding-left:20px}
+        .dropdown:hover .submenu{display:block}
+        .overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:#00000080;visibility:hidden;opacity:0;transition:opacity .3s ease-in-out}
+        .overlay.show{visibility:visible;opacity:1}
         /* FOOTER */
         footer{text-align:center;padding:15px;font-size:16px;background-color:#f4f4f4;color:#333;margin-top:30px}
         body.dark-mode footer{background-color:#222;color:#ddd}
@@ -105,9 +119,27 @@
         <div class="brand-name">ASIBUKA Group</div>
         <div class="nav-icons">
             <span id="dark-mode-toggle">🌙</span>
+            <button id="hamburger-menu" class="hamburger">&#9776;</button>
         </div>
     </nav>
-
+    <!-- Sidebar Menu -->
+    <aside id="sidebar" class="sidebar">
+    <button id="close-sidebar" class="close-btn">&times;</button>
+    <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li class="dropdown">
+            <a href="#">Services &#x25BE;</a>
+            <ul class="submenu">
+                <li><a href="#">Web Design</a></li>
+                <li><a href="#">SEO</a></li>
+                <li><a href="#">Marketing</a></li>
+            </ul>
+        </li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</aside>
+    <div id="overlay" class="overlay"></div>
     <!-- Bio Link Section -->
     <header class="bio-container">
         <img src="/files/ASIBUKA-Blue.png" alt="ASIBUKA Group" title="ASIBUKA Group">
@@ -195,6 +227,28 @@
 
         // Auto-slide every 5 seconds
         setInterval(nextSlide, 5000);
+        const hamburger = document.getElementById("hamburger-menu");
+    const sidebar = document.getElementById("sidebar");
+    const closeSidebar = document.getElementById("close-sidebar");
+    const overlay = document.getElementById("overlay");
+
+    // Open Sidebar
+    hamburger.addEventListener("click", () => {
+        sidebar.classList.add("open");
+        overlay.classList.add("show");
+    });
+
+    // Close Sidebar
+    closeSidebar.addEventListener("click", () => {
+        sidebar.classList.remove("open");
+        overlay.classList.remove("show");
+    });
+
+    // Close Sidebar When Clicking Outside
+    overlay.addEventListener("click", () => {
+        sidebar.classList.remove("open");
+        overlay.classList.remove("show");
+    });
         document.getElementById("year").textContent = new Date().getFullYear();
     </script>
 </body>
