--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             .slide{font-size:18px}
         }
         /* Sidebar Menu */
-        .hamburger{background:none;border:none;font-size:24px;cursor:pointer;color:#004AAD;transition:transform .3s ease-in-out}
+        .hamburger{background:none;border:none;font-size:24px;cursor:pointer;color:#fff;transition:transform .3s ease-in-out}
         .hamburger:hover{transform:scale(1.1)}
         .sidebar{position:fixed;top:0;left:-250px;width:250px;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding-top:60px;box-shadow:2px 0 10px #0000004d}
         .sidebar.open{left:0}
