--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         .menu a:hover{background:#fff3}
         .dropdown .submenu{display:none;background:#003580;padding-left:20px}
         .dropdown:hover .submenu{display:block}
-        .overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:#00000080;visibility:hidden;opacity:0;transition:opacity .3s ease-in-out}
+        .overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:#00000080;visibility:hidden;z-index:1000;opacity:0;transition:opacity .3s ease-in-out}
         .overlay.show{visibility:visible;opacity:1}
         /* FOOTER */
         footer{text-align:center;padding:15px;font-size:16px;background-color:#f4f4f4;color:#333;margin-top:30px}
