--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         /* Sidebar Menu */
         .hamburger{background:none;border:none;font-size:24px;cursor:pointer;color:#fff;transition:transform .3s ease-in-out}
         .hamburger:hover{transform:scale(1.1)}
-        .sidebar{position:fixed;top:0;left:-250px;width:250px;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding-top:60px;box-shadow:2px 0 10px #0000004d}
+        .sidebar{position:fixed;top:0;left:-250px;width:300px;z-index:3;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding-top:60px;box-shadow:2px 0 10px #0000004d}
         .sidebar.open{left:0}
         .close-btn{position:absolute;top:10px;right:10px;font-size:24px;background:none;border:none;color:#fff;cursor:pointer}
         .menu{list-style:none;padding:0}
@@ -106,7 +106,7 @@
         .menu a:hover{background:#fff3}
         .dropdown .submenu{display:none;background:#003580;padding-left:20px}
         .dropdown:hover .submenu{display:block}
-        .overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:#00000080;visibility:hidden;z-index:1000;opacity:0;transition:opacity .3s ease-in-out}
+        .overlay{position:fixed;top:0;left:0;width:100%;height:100%;background:#00000080;visibility:hidden;z-index:2;opacity:0;transition:opacity .3s ease-in-out}
         .overlay.show{visibility:visible;opacity:1}
         /* FOOTER */
         footer{text-align:center;padding:15px;font-size:16px;background-color:#f4f4f4;color:#333;margin-top:30px}
@@ -116,7 +116,7 @@
 <body>
     <!-- Floating Navbar -->
     <nav class="floating-navbar">
-        <div class="brand-name">ASIBUKA Group</div>
+        <div class="brand-name"><a href='/' title='ASIBUKA Group'>ASIBUKA Group</div>
         <div class="nav-icons">
             <span id="dark-mode-toggle">🌙</span>
             <button id="hamburger-menu" class="hamburger">&#9776;</button>
@@ -177,7 +177,8 @@
         </div>
     </main>
 <footer>
-    <p>Made with ❤️ by ASIBUKA Group &copy; <span id="year"></span></p>
+    <p>Made with ❤️ by ASIBUKA Group </p>
+    <p>All right reserved &copy; 2022-<span id="year"></span></p>
 </footer>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
