--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         body.dark-mode{background-color:#1e1e1e;color:#f4f4f4}
         /* Floating Navbar - Full Width */
         .floating-navbar{position:fixed;top:0;left:50%;transform:translateX(-50%);width:100%;max-width:600px;background:#004AAD;padding:15px 20px;box-shadow:0 4px 10px #0000001a;z-index:1000;display:flex;align-items:center;justify-content:space-between;border-radius:0 0 15px 15px}
-        .brand-name{font-size:18px;color:#fff;font-weight:700}
+        .brand-name,.brand-name a{text-decoration:none;font-size:18px;color:#fff;font-weight:700}
         .nav-icons{display:flex;align-items:center}
         .nav-icons span{font-size:24px;color:#fff;cursor:pointer;margin-left:15px;transition:.3s}
         #dark-mode-toggle:hover{color:#ff0}
@@ -97,7 +97,7 @@
         /* Sidebar Menu */
         .hamburger{background:none;border:none;font-size:24px;cursor:pointer;color:#fff;transition:transform .3s ease-in-out}
         .hamburger:hover{transform:scale(1.1)}
-        .sidebar{position:fixed;top:0;left:-250px;width:300px;z-index:3;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding-top:60px;box-shadow:2px 0 10px #0000004d}
+        .sidebar{position:fixed;top:0;left:-250px;width:250px;z-index:3;height:100%;background:#004AAD;color:#fff;transition:left .3s ease-in-out;padding-top:60px;box-shadow:2px 0 10px #0000004d}
         .sidebar.open{left:0}
         .close-btn{position:absolute;top:10px;right:10px;font-size:24px;background:none;border:none;color:#fff;cursor:pointer}
         .menu{list-style:none;padding:0}
