--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <body>
     <!-- Floating Navbar -->
     <nav class="floating-navbar">
-        <div class="brand-name"><a href='/' title='ASIBUKA Group'>ASIBUKA Group</div>
+        <div class="brand-name"><a href='/' title='ASIBUKA Group'>ASIBUKA Group</a></div>
         <div class="nav-icons">
             <span id="dark-mode-toggle">🌙</span>
             <button id="hamburger-menu" class="hamburger">&#9776;</button>
