--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <button class="next" onclick="nextSlide()">&#10095;</button>
     </div>
+        <h2>SLOGAN</h2>
+        <blockquote>Aku bisa! Harus bisa! Pasti bisa!</blockquote>
     </section>
     <main>
         <h2>ASIBUKA Logistics</h2>
