--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         footer{text-align:center;padding:15px;font-size:16px;background-color:#f4f4f4;color:#333;margin-top:30px}
         body.dark-mode footer{background-color:#222;color:#ddd}
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4951061355072034" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Floating Navbar -->
@@ -154,6 +155,17 @@
             </a>
         </div>
     </header>
+    <section>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4951061355072034"
+     data-ad-slot="4462286938"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    </section>
     <section>
         <h2>VISI</h2>
         <blockquote>Menjadi wadah bagi pengusaha UMKM dan mengembangkan ekonomi rakyat.</blockquote>
