--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
     <main>
         <h2>ASIBUKA Logistics</h2>
         <div class='links'>
-            <a href='https://www.asibuka.com' title='JNT Cargo Sukamenak' target='_blank' rel='nofollow noopener noreferrer'>J&T Cargo Sukamenak</a>
+            <a href='https://maps.app.goo.gl/E5aenxU1DDeQRKgp6' title='JNT Cargo Sukamenak' target='_blank' rel='nofollow noopener noreferrer'>J&T Cargo Sukamenak</a>
+            <a href='https://maps.app.goo.gl/E5aenxU1DDeQRKgp6' title='SiCepat Express Sukamenak' target='_blank' rel='nofollow noopener noreferrer'>SiCepat Express Sukamenak</a>
         </div>
     </main>
 <footer>
